--- a/hands-on/IdentityExample/Views/Home/Index.cshtml
+++ b/hands-on/IdentityExample/Views/Home/Index.cshtml
@@ -25,11 +25,12 @@
         <a href="/home/secret">Secret</a>
     </li>
     <li>
+        <a href="/home/manage">Manage</a>
+    </li>
+    <li>
         <a href="/home/logout">LogOut</a>
     </li>
 </ul>
 
-<br>
-<b>@Context.User.Identity.Name</b>
 </body>
 </html>
