--- a/hands-on/IdentityExample/Views/Home/Manage.cshtml
+++ b/hands-on/IdentityExample/Views/Home/Manage.cshtml
@@ -8,10 +8,10 @@
 
 <html>
 <head>
-    <title>Secret</title>
+    <title>Manage</title>
 </head>
 <body>
-<h1>Secret Page</h1>
+<h1>Manage Page</h1>
 <ul>
     <li>
         <a href="/home/login">LogIn</a>
@@ -29,6 +29,7 @@
         <a href="/home/logout">LogOut</a>
     </li>
 </ul>
+
 
 <br>
 Hey, You are <b>@Context.User.Identity.Name</b> ! aren't you? There's no secret!!!
