--- a/hands-on/IdentityExample/Views/Home/Register.cshtml
+++ b/hands-on/IdentityExample/Views/Home/Register.cshtml
@@ -12,20 +12,23 @@
 </head>
 <body>
 <h1>Register Page</h1>
-<ul>
-    <li>
-        <a href="/home/login">LogIn</a>
-    </li>
-    <li>
-        <a href="/home/register">Register</a>
-    </li>
-    <li>
-        <a href="/home/secret">Secret</a>
-    </li>
-    <li>
-        <a href="/home/logout">LogOut</a>
-    </li>
-</ul>
+<<ul>
+     <li>
+         <a href="/home/login">LogIn</a>
+     </li>
+     <li>
+         <a href="/home/register">Register</a>
+     </li>
+     <li>
+         <a href="/home/secret">Secret</a>
+     </li>
+     <li>
+         <a href="/home/manage">Manage</a>
+     </li>
+     <li>
+         <a href="/home/logout">LogOut</a>
+     </li>
+ </ul>
 <form method="post">
     <input type="text" name="username" value=""/>
     <input type="text" name="password" value=""/>
