--- a/hands-on/IdentityExample/Views/Home/Login.cshtml
+++ b/hands-on/IdentityExample/Views/Home/Login.cshtml
@@ -25,6 +25,9 @@
         <a href="/home/secret">Secret</a>
     </li>
     <li>
+        <a href="/home/manage">Manage</a>
+    </li>
+    <li>
         <a href="/home/logout">LogOut</a>
     </li>
 </ul>
