--- a/hands-on/IdentityExample/Views/Home/Secret.cshtml
+++ b/hands-on/IdentityExample/Views/Home/Secret.cshtml
@@ -33,6 +33,32 @@
 <br>
 Hey, You are <b>@Context.User.Identity.Name</b> ! aren't you? There's no secret!!!
 <br>
+
+@using System.Security.Claims
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService AuthorizationService
+
+@{
+    var result = await AuthorizationService.AuthorizeAsync(User, "SiteManager");
+    if (result.Succeeded)
+    {
+        var role = @User.Claims.FirstOrDefault(claim => claim.Type == ClaimTypes.Role)?.Value ?? "N/A";
+        <p>You are <b>Manager</b>(Role=@role)</p>   
+    }
+    else
+    {
+        <p>You are just User</p>
+    }
     
+    <h3>Cookies</h3>
+    <ul>
+        @foreach(var cookie in Context.Request.Cookies)
+        {
+            <li>'@cookie.Key':@cookie.Value</li>
+        }
+    </ul>
+    
+    
+}
 </body>
 </html>
