Ep.4 Extra - Global Authorization Filter Test

--- a/hands-on/IdentityExample/Views/Home/Secret.cshtml
+++ b/hands-on/IdentityExample/Views/Home/Secret.cshtml
@@ -39,7 +39,7 @@ Hey, You are <b>@Context.User.Identity.Name</b> ! aren't you? There's no secret!
 @inject IAuthorizationService AuthorizationService
 
 @{
-    var result = await AuthorizationService.AuthorizeAsync(User, "SiteManager");
+    var result = await AuthorizationService.AuthorizeAsync(User, "Manager");
     if (result.Succeeded)
     {
         var role = @User.Claims.FirstOrDefault(claim => claim.Type == ClaimTypes.Role)?.Value ?? "N/A";
