--- a/hands-on/IdentityExample/Views/Home/Secret.cshtml
+++ b/hands-on/IdentityExample/Views/Home/Secret.cshtml
@@ -50,6 +50,14 @@ Hey, You are <b>@Context.User.Identity.Name</b> ! aren't you? There's no secret!
         <p>You are just User</p>
     }
     
+    <h3>Claims</h3>
+    <ul>
+        @foreach (var claim in Context.User.Claims)
+        {
+            <li>@claim.ToString()</li>
+        }
+    </ul>
+    
     <h3>Cookies</h3>
     <ul>
         @foreach(var cookie in Context.Request.Cookies)
