Ep. 4 Extra - AuthorizationPolicyProvider test

--- a/hands-on/IdentityExample/Views/CookieJar/Index.cshtml
+++ b/hands-on/IdentityExample/Views/CookieJar/Index.cshtml
@@ -30,6 +30,9 @@
     <li>
         <a href="/home/logout">LogOut</a>
     </li>
+    <li>
+        <a href="/cookiejar">CookieJar</a>
+    </li>
 </ul>
 
 <h3>Authentication Status</h3>
