--- a/hands-on/IdentityExample/Views/Home/Secret.cshtml
+++ b/hands-on/IdentityExample/Views/Home/Secret.cshtml
@@ -28,6 +28,9 @@
     <li>
         <a href="/home/logout">LogOut</a>
     </li>
+    <li>
+        <a href="/cookiejar">CookieJar</a>
+    </li>
 </ul>
 
 <br>
