--- a/hands-on/IdentityExample/Views/Home/AccessDenied.cshtml
+++ b/hands-on/IdentityExample/Views/Home/AccessDenied.cshtml
@@ -1,4 +1,5 @@
-﻿@* @model object *@
+﻿@using Microsoft.AspNetCore.Http
+@* @model object *@
 
 @{
     Layout = null;
@@ -6,12 +7,13 @@
 
 <!DOCTYPE html>
 
+
 <html>
 <head>
-    <title>Manage</title>
+    <title>Access Denied!</title>
 </head>
 <body>
-<h1>Manage Page</h1>
+<h1>Access Denied!</h1>
 <ul>
     <li>
         <a href="/home/login">LogIn</a>
@@ -33,10 +35,20 @@
     </li>
 </ul>
 
+<h3>Authentication Status</h3>
+@if (User.Identity.IsAuthenticated)
+{
+    var id = User.Identity;
+    <h4>Authenticated!</h4>
+    <ul>
+        <li>Name : @id.Name</li>
+        <li>AuthenticationType : @id.AuthenticationType</li>
+    </ul>
+}
+else
+{
+    <h4>Not Authenticated!</h4>
+}
 
-<br>
-Hey, You are <b>@Context.User.Identity.Name</b> ! aren't you? There's no secret!!!
-<br>
-    
 </body>
 </html>
