--- a/hands-on/ExampleOAuthClient/Views/Home/Secret.cshtml
+++ b/hands-on/ExampleOAuthClient/Views/Home/Secret.cshtml
@@ -6,10 +6,10 @@
 
 <html>
 <head>
-    <title>Example-OAuthServer</title>
+    <title>Example-OAuthClient</title>
 </head>
 <body>
-<h1>OAuth Server - Home Page</h1>
+<h1>OAuth Client - Secret Page</h1>
 
 <ul>
     <li>
@@ -27,6 +27,19 @@
     <li>
         <a href="/home/logout">LogOut</a>
     </li>
+</ul>
+
+<h3>View Data</h3>
+<ul>
+    @{
+        foreach (var item in ViewData)
+        {
+            <li>
+                @item.Key : @item.Value
+            </li>            
+        }
+    }
+    
 </ul>
 </body>
 </html>
