Ep.12 Cookies, id_token, access_token, Claims - 오묘한 claim의 세계. profile 정보를 빼면, 사용자 정보가 전부 없어지지만, 명시적으로 준 "mirero.role" 은 포함되게 할 수 있었다...

--- a/hands-on/SecuredWebApp/Views/Home/secret.cshtml
+++ b/hands-on/SecuredWebApp/Views/Home/secret.cshtml
@@ -18,5 +18,10 @@
         <a href="/home">Home</a>
     </li>
 </ul>
+
+
+<div>
+    <p>The Api One Secret Response : @ViewData["ApiOneResult"]</p>
+</div>
 </body>
 </html>
