--- a/hands-on/SecuredJsWebApp/Views/Home/signin.cshtml
+++ b/hands-on/SecuredJsWebApp/Views/Home/signin.cshtml
@@ -15,6 +15,8 @@
 
 @* <button onclick="extractTokens()">Extract Tokens</button> *@
 
-<script src="~/sign-in-callback.js"></script>
+<script src="~/vendors/oidc-client.js"></script>
+<script src="~/signin.js"></script>
+@* <script src="~/sign-in-callback.js"></script> *@
 </body>
 </html>
