Ep.16 Persistance & Claims & Refreshing (Implicit Flow) - 완료. 다만, signin 이후 어떻게 페이지 한곳에 머무는지 잘 이해하지 못함.

--- a/hands-on/SecuredJsWebApp/Views/Home/Index.cshtml
+++ b/hands-on/SecuredJsWebApp/Views/Home/Index.cshtml
@@ -13,17 +13,17 @@
 <body>
 <h1>Js Web App - Home Page</h1>
 
-<div>
+<div id="signin" style="display: none">
     <button onclick="signIn()">SignIn</button>
 </div>
 <div>
     <button onclick="callApi()">CallApi</button>
 </div>
 @* <script src="~/sign-in.js"></script> *@
-@* <script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.10.1/oidc-client.js" integrity="sha512-t9WpEHKQ5tadkDRTatEyWBMR2bnUfjLnbWNo65YovvvQT9CRSxkR9ZDash7JvBB5xopickn6/TTN5qltoSJlCw==" crossorigin="anonymous"></script> *@
-@* <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.js" integrity="sha512-otOZr2EcknK9a5aa3BbMR9XOjYKtxxscwyRHN6zmdXuRfJ5uApkHB7cz1laWk2g8RKLzV9qv/fl3RPwfCuoxHQ==" crossorigin="anonymous"></script> *@
-<script src="~/vendors/oidc-client.js"></script>
-<script src="~/vendors/axios.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/oidc-client/1.10.1/oidc-client.js" integrity="sha512-t9WpEHKQ5tadkDRTatEyWBMR2bnUfjLnbWNo65YovvvQT9CRSxkR9ZDash7JvBB5xopickn6/TTN5qltoSJlCw==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.js" integrity="sha512-otOZr2EcknK9a5aa3BbMR9XOjYKtxxscwyRHN6zmdXuRfJ5uApkHB7cz1laWk2g8RKLzV9qv/fl3RPwfCuoxHQ==" crossorigin="anonymous"></script>
+@* <script src="~/vendors/oidc-client.js"></script> *@
+@* <script src="~/vendors/axios.js"></script> *@
 <script src="~/main.js"></script>
 </body>
 </html>
