Ep.18 Sign Out & Certificates - signout 기능까지 확인.

--- a/hands-on/SecuredJsWebApp/Views/Home/Index.cshtml
+++ b/hands-on/SecuredJsWebApp/Views/Home/Index.cshtml
@@ -16,6 +16,9 @@
 <div id="signin" style="display: none">
     <button onclick="signIn()">SignIn</button>
 </div>
+<div id="signout" style="display: none">
+    <button onclick="signOut()">SignOut <b><span id="username"></span></b></button>
+</div>
 <div>
     <button onclick="callApi()">CallApi</button>
 </div>
